tests/snapshots/examples_fixtures/hint_demos__unknown_operator.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/hint_demos/unknown_operator.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
